--- a/package.json
+++ b/package.json
@@ -24,5 +24,27 @@
     "glob": "^5.0.6",
     "mongoose": "^4.0.3",
     "path": "^0.11.14"
+  },
+  "devDependencies": {
+    "angular": "^1.3.15",
+    "angular-animate": "^1.3.15",
+    "angular-aria": "^1.3.15",
+    "angular-material": "^0.9.2",
+    "angular-new-router": "^0.5.3",
+    "angular-resource": "^1.3.15",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-connect": "^2.2.0",
+    "gulp-file": "^0.2.0",
+    "gulp-flatten": "0.0.4",
+    "gulp-inject": "^1.2.0",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-stylus": "^2.0.1",
+    "gulp-sync": "^0.1.4",
+    "gulp-uglify": "^1.2.0",
+    "nib": "^1.1.0",
+    "systemjs": "^0.16.11"
   }
 }
