--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
   "homepage": "https://github.com/lellimecnar/mean-es6",
   "dependencies": {
     "body-parser": "^1.12.4",
-    "change-case": "^2.3.0",
     "express": "^4.12.3",
-    "glob": "^5.0.6",
-    "mongoose": "^4.0.3",
-    "path": "^0.11.14"
+    "lazy-rest": "^0.2.4",
+    "mongoose": "^4.0.3"
   },
   "devDependencies": {
     "angular": "^1.3.15",
@@ -41,9 +39,11 @@
     "gulp-flatten": "0.0.4",
     "gulp-inject": "^1.2.0",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.0.1",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.2.0",
+    "material-design-icons": "^1.0.1",
     "nib": "^1.1.0",
     "systemjs": "^0.16.11"
   }
