--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "angular-material": "^0.9.2",
     "angular-new-router": "^0.5.3",
     "angular-resource": "^1.3.15",
+    "change-case": "^2.3.0",
+    "clone": "^1.0.2",
     "del": "^1.1.1",
+    "glob": "^5.0.6",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
@@ -45,6 +48,7 @@
     "gulp-uglify": "^1.2.0",
     "material-design-icons": "^1.0.1",
     "nib": "^1.1.0",
+    "replace-ext": "0.0.1",
     "systemjs": "^0.16.11"
   }
 }
