--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "angular": "^1.3.15",
     "angular-animate": "^1.3.15",
     "angular-aria": "^1.3.15",
-    "angular-material": "^0.9.2",
+    "angular-material": "^0.9.4",
     "angular-new-router": "^0.5.3",
     "angular-resource": "^1.3.15",
     "change-case": "^2.3.0",
@@ -37,7 +37,7 @@
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-concat": "^2.5.2",
-    "gulp-connect": "^2.2.0",
+    "gulp-express": "^0.3.5",
     "gulp-file": "^0.2.0",
     "gulp-flatten": "0.0.4",
     "gulp-inject": "^1.2.0",
@@ -45,7 +45,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.0.1",
     "gulp-sync": "^0.1.4",
-    "gulp-uglify": "^1.2.0",
     "material-design-icons": "^1.0.1",
     "nib": "^1.1.0",
     "replace-ext": "0.0.1",
