--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.12.4",
     "express": "^4.12.3",
     "lazy-rest": "^0.2.9",
-    "mongoose": "^4.0.3"
+    "mkdirp": "^0.5.1",
+    "mongoose": "^4.0.3",
+    "multer": "^0.1.8"
   },
   "devDependencies": {
     "angular": "^1.3.15",
