--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lazy-rest": "^0.2.9",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.0.3",
-    "multer": "^0.1.8"
+    "multer": "^0.1.8",
+    "object-diff": "0.0.2"
   },
   "devDependencies": {
     "angular": "^1.3.15",
